--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cookie-parser": "^1.4.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "express-validator": "^6.4.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1"
   }
 }
