--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.1.6",
     "express-validator": "^6.4.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nexmo": "^2.6.0"
   }
 }
